samples/_failures_safe/1761130596_d650cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbdcc48e.c: In function ‘main’:
./samples/SAFE/__tmp_dbdcc48e.c:138:16: error: expected declaration or statement at end of input
  138 |     op = (enum Operation)choice;
      |                ^~~~~~~~~
